[package]

name = "treap"
version = "0.0.1"
authors = ["Michael Budde <mbudde@gmail.com>"]
license = "MIT"
keywords = ["container", "data-structure", "map", "set", "tree"]
readme = "README.md"
homepage = "https://github.com/mbudde/treap-rs"
repository = "https://github.com/mbudde/treap-rs"
documentation = "http://mbudde.github.io/treap-rs/treap/index.html"
description = "Randomized treap implementation"

[dependencies]
rand = "0.1.*"
