[package]

name = "treap"
version = "0.0.3"
authors = ["Michael Budde <mbudde@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mbudde/treap-rs"
repository = "https://github.com/mbudde/treap-rs"
documentation = "http://mbudde.github.io/treap-rs/treap/index.html"
description = "Do not use - intended for internal use of teardown_tree crate"

[dependencies]
rand = "0.3"
